# LexSALDO

./: Procfile  README.md  api.py  generate_json_files.py  main.py  pyproject.toml  requirements.txt  update.sh
models/: form_representation.py  lemma.py  lexical_entry.py  sense.py  sense_relation.py
