[tool.poetry]
name = "lexsaldo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3+"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
jsonlines = "^4.0.0"
fastapi = "^0.111.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
codespell = "^2.2.1"
coverage = "^6.5.0"
dead = "^1.5.0"
mypy = "^1.1.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
ruff = "^0.0.263"
safety = "^2.2.0"
tomli = "^2.0.1"
types-python-dateutil = "^2.8.19.2"
types-requests = "^2.28.11.2"
virtualenv = "20.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
